welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: Unmatched closing brace '}' ignored here
	if( a>29&&a<41&&b>29&&b<41 || a>39&&a<51&&b>39&&b<51}{return true}else{return false}}
                                                            ^in3050:2: error: ')' expected but 'else' found.
	if( a>29&&a<41&&b>29&&b<41 || a>39&&a<51&&b>39&&b<51}{return true}else{return false}}
                                                                          ^in3050:5: error: Unmatched closing brace '}' ignored here
 }
 ^